added content to pages

--- a/cooling.html
+++ b/cooling.html
@@ -1,83 +1,53 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <link href="stylesheet.css" rel="stylesheet" type="text/css">
-  <meta charset="utf-8">
-  <title>Joe the Plumber — Cooling</title>
-  <script src="menu.js" type="text/javascript"></script>
+<link href="stylesheet.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8">
+<title>Joe the Plumber — Cooling</title>
+<script src="menu.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <div class="logo">
-    <img src="images/logo.svg" alt="logo" width="150px" height="150px" />
-  </div>
-  <div class="header">
-   Cooling Services
-  </div>
-
-  <nav>
-    <ul id="MenuBar1" class="MenuBarVertical">
-      <li>
-        <a href="index.html">Home</a>
-      </li>
-      <li>
-        <a class="MenuBarItemSubmenu" href="about.html">About</a>
-        <ul>
-          <li>
-            <a href="givingback.html">Joe Gives Back</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a class="MenuBarItemSubmenu" href="services.html">Services</a>
-        <ul>
-          <li>
-            <a href="plumbing.html">Plumbing</a>
-          </li>
-          <li>
-            <a href="heating.html">Heating</a>
-          </li>
-          <li>
-            <a href="cooling.html">Cooling</a>
-          </li>
-          <li>
-            <a href="solar.html">Solar Heating</a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <a href="plans.html">Plans</a>
-      </li>
-      <li>
-        <a href="askjoe.html">Ask Joe</a>
-      </li>
-      <li>
-        <a href="contact.html">Contact</a>
-      </li>
-    </ul>
-    <script type="text/javascript">
+<div class="logo"> <img src="images/logo.svg" alt="logo" width="150px" height="150px" /> </div>
+<div class="header"> Cooling Services </div>
+<nav>
+  <ul id="MenuBar1" class="MenuBarVertical">
+    <li> <a href="index.html">Home</a> </li>
+    <li> <a class="MenuBarItemSubmenu" href="about.html">About</a>
+      <ul>
+        <li> <a href="givingback.html">Joe Gives Back</a> </li>
+      </ul>
+    </li>
+    <li> <a class="MenuBarItemSubmenu" href="services.html">Services</a>
+      <ul>
+        <li> <a href="plumbing.html">Plumbing</a> </li>
+        <li> <a href="heating.html">Heating</a> </li>
+        <li> <a href="cooling.html">Cooling</a> </li>
+        <li> <a href="solar.html">Solar Heating</a> </li>
+      </ul>
+    </li>
+    <li> <a href="plans.html">Plans</a> </li>
+    <li> <a href="askjoe.html">Ask Joe</a> </li>
+    <li> <a href="contact.html">Contact</a> </li>
+  </ul>
+  <script type="text/javascript">
       var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {
         imgRight: "images/SpryMenuBarRightHover.gif"
       });
-    </script>
-  </nav>
-  <div class="content">
-  <div class="section-title">Don’t lose your cool!
-  </div>
-  Let Joe the Plumber install or service your home or business’ energy-efficient air conditioning. Cooling systems require as much TLC as your boiler. With the right equipment, installment configuration, and maintenance, a cooling system can run quietly, smoothly, and cost-efficiently. No matter the issue, we never lose our cool! Some of our cooling services include:
-<ul>
-
-<li>Energy-efficient central cooling system installation
-
-<li>Service, repair, and replacement of cooling system equipment
-
-<li>Freon gas leak detection and repair
-
-<li>Air quality filtration system analysis, installation, maintenance, or repair
-
-</ul>
+    </script> 
+</nav>
+<div class="content">
+  <div class="section-title-medium">Don’t lose your cool!</div>
+  <p>Let Joe the Plumber install or service your home or business’ energy-efficient air conditioning. Cooling systems require as much TLC as your boiler. With the right equipment, installment configuration, and maintenance, a cooling system can run quietly, smoothly, and cost-efficiently. No matter the issue, we never lose our cool! Some of our cooling services include:
+  <p> 
+</div>
+<div class="services">
+  <ul>
+    <li>Energy-efficient central cooling system installation
+    <li>Service, repair, and replacement of cooling system equipment
+    <li>Freon gas leak detection and repair
+    <li>Air quality filtration system analysis, installation, maintenance, or repair
+  </ul>
 </div>
 </body>
-
 </html>
