--- a/heating.html
+++ b/heating.html
@@ -63,8 +63,10 @@
     </script>
   </nav>
   <div class="content">
-  Keeping warm when it’s cold outside should be hassle free.
-That’s why Joe the Plumber recommends installing fuel-efficient heating systems, and their technicians are experienced in maintaining and repairing all gas, oil, and electrical heating equipment. Give Joe the Plumber a call. We’re ready to give you unsurpassed service at a competitive price. Some of our heating services include:
+  <div class="section-title-medium">Keeping warm when it’s cold outside should be hassle free.</div>
+<p>That’s why Joe the Plumber recommends installing fuel-efficient heating systems, and their technicians are experienced in maintaining and repairing all gas, oil, and electrical heating equipment. Give Joe the Plumber a call. We’re ready to give you unsurpassed service at a competitive price. Some of our heating services include:</p>
+</div>
+<div class="services">
 <ul>
 <li>Energy-efficient boiler, burner, and water heater installation</li>
 
@@ -76,6 +78,7 @@ That’s why Joe the Plumber recommends installing fuel-efficient heating system
 maintenance, or repair</li>
 </ul>
 </div>
+
 </body>
 
 </html>
