--- a/plumbing.html
+++ b/plumbing.html
@@ -62,12 +62,10 @@
       });
     </script>
   </nav>
-  <div class="section-title">
-  Plumbing Services
-  </div>
   <div class="content">
-  It seems most people need a plumber only in an emergency! 
-The sink is backed up, or you have no hot water... No matter what the problem, or the time of day or night, Joe the Plumber’s technicians are on call 24 hours a day, 7 days a week, 365 days a year. With over 40 on-the-road technicians, Joe the Plumber is prepared to meet every plumbing need. Some of our plumbing services include:
+ <div class="section-title-medium">It seems most people need a plumber only in an emergency!</div>
+<p>The sink is backed up, or you have no hot water... No matter what the problem, or the time of day or night, Joe the Plumber’s technicians are on call 24 hours a day, 7 days a week, 365 days a year. With over 40 on-the-road technicians, Joe the Plumber is prepared to meet every plumbing need. Some of our plumbing services include:</p>
+<div class="services">
 <ul>
 <li>Kitchen, bath, and laundry room upgrades or installation</li>
 
@@ -78,6 +76,8 @@ The sink is backed up, or you have no hot water... No matter what the problem, o
 <li>Water filtering system installation or repair</li>
 
 <li>Underground lawn sprinkler installation or repair</li>
-</body>
 </ul>
+</div>
+</body>
+
 </html>
