--- a/solar.html
+++ b/solar.html
@@ -62,12 +62,11 @@
       });
     </script>
   </nav>
-  <div class="section-title">
-  Solar Heating Services
-  </div>
   <div class="content">
-Tired of the never-ending rise in heating fuel costs?
-So are we. That’s why Joe the Plumber has become a leader in the installation of Solar Thermal Energy Systems. Harnessing the sun’s power for your water-heating needs not only reduces your carbon footprint, but saves you money. Studies show that households and businesses can save as much as 75% on their water-heating costs with the right solar thermal system. Some of our solar heating services include:
+<div class="section-title-medium">Tired of the never-ending rise in heating fuel costs?</div>
+<p>So are we. That’s why Joe the Plumber has become a leader in the installation of Solar Thermal Energy Systems. Harnessing the sun’s power for your water-heating needs not only reduces your carbon footprint, but saves you money. Studies show that households and businesses can save as much as 75% on their water-heating costs with the right solar thermal system. Some of our solar heating services include:</p>
+</div>
+<div class="services">
 <ul>
 <li>Site evaluation</li>
 <li>System design and installation</li>
