Fixed some formatting issues

--- a/givingback.html
+++ b/givingback.html
@@ -67,7 +67,7 @@
 
   <p>Each year, a percentage of our profits are shared with these organizations. In addition to our financial support, Joe the Plumber contributes pro bono services as needed to local charitable agencies.</p>
   </div>
-  <div class="charities">  
+  <div class="charities left">  
     <div class="section-title-medium"><p>Ronald McDonald House Charities of New Mexico</p></div>
 
 <div class="text small-padding-top"><p>The Ronald McDonald House Charities of New Mexico provide comfort, care, and a home away from home for families of children with medical needs.</p>
