--- a/plans.html
+++ b/plans.html
@@ -84,14 +84,22 @@
 <div class="section-title-medium">HVAC System Health Plan: $225 / year</div>
 <li>Priority service that moves you to the front of the line</li>
 <li>Replacement parts as described in the Equipment Parts Covered list</li> 
-
-•Labor required to repair or replace the items covered 
-
-•Includes yearly equipment tune-up and inspection
+<li>Labor required to repair or replace the items covered </li>
+<li>Includes yearly equipment tune-up and inspection</li>
 </div>
-
-Joe Gives Back
-With deep roots in the community, we’re committed to helping our neighbors. Read more>
+<div class="section-title-medium">Joe Gives Back</div>
+        <div class="text small-padding-top large-padding-bottom">With our deep roots in the community, we’re committed to helping our neighbors. <a href="givingback.html">Read more &gt </a></div>
+    <div class="foot">
+        <div class="foot-right">
+            <ul>
+                <li>Phone: (888) 555-HEAT</li>
+                <li>Fax: (957) 555-HEAT</li>
+                <li>Email: contact@joetheplumber.com</li>
+            </ul>
+        </div>
+        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
+        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
+    </div>
 </body>
 
 </html>
