--- a/askjoe.html
+++ b/askjoe.html
@@ -80,6 +80,17 @@ A3: Front loading washers sometimes develop mold around the thick gasket that se
 A4: A load calculation must be performed on your home to determine the proper system size that meets all the physical requirements. Ultimately, the size determination should be made by a qualified air conditioning specialist.
 A5: There are many reasons why you may be running out of hot water. Before installing a larger heater, one of our technicians can analyze your options.
 </div>
+<div class="foot">
+        <div class="foot-right">
+            <ul>
+                <li>Phone: (888) 555-HEAT</li>
+                <li>Fax: (957) 555-HEAT</li>
+                <li>Email: contact@joetheplumber.com</li>
+            </ul>
+        </div>
+        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
+        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
+    </div>
 </body>
 
 </html>
