--- a/contact.html
+++ b/contact.html
@@ -63,21 +63,28 @@
     </script>
   </nav>
   <div class="content">
-  <div class="text small-padding-top">
-The quickest way to schedule a service appointment is to contact our office:</div>
-<div class="services">
-<ul>
-<li>Email: contact@joetheplumber.com</li>
-<li>Phone: (888) 555-HEAT</li>
-<li>Fax: (957) 555-HEAT</li>
-<li>Mail: Joe the Plumber, Inc.
-5255 Warwick Avenue
- Albuquerque, NM 87101</li>
- </ul>
- </div>
-<div class="text left">Or, complete the form below and we will contact you within 24 hours.</div>
-</div>
+  Contact us
 
+The quickest way to schedule a service appointment is to contact our office:
+Email: contact@joetheplumber.com
+Phone: (888) 555-HEAT
+Fax: (957) 555-HEAT
+Mail: Joe the Plumber, Inc.
+5255 Warwick Avenue
+ Albuquerque, NM 87101
+Or, complete the form below and we will contact you within 24 hours.
+</div>
+<div class="foot">
+        <div class="foot-right">
+            <ul>
+                <li>Phone: (888) 555-HEAT</li>
+                <li>Fax: (957) 555-HEAT</li>
+                <li>Email: contact@joetheplumber.com</li>
+            </ul>
+        </div>
+        <div class="foot-left">&copy;2016 Joe the Plumber, Inc. All Rights Reserved</div>
+        <div class="foot-left">Joe the Plumber, Inc. 5255 Warwick Avenue Albuquerque, NM 8710</div>
+    </div>
 </body>
 
 </html>
